--- a/config/config.ini
+++ b/config/config.ini
@@ -4,5 +4,5 @@ include_path = system/app
 title = "QUOTE"
 
 [superadmin : cpanel]
-items[] = "<a href='javascript:;' data-url='{url}plugin/quote/run/manage/' data-pheight="574" class='tpopup'>Manage quotes</a>"
-items[] = "<a href='javascript:;' data-url='{url}plugin/quote/run/settings/' class='tpopup'>Quote configuration</a>"
+items[] = "<a href='javascript:;' data-url='{url}plugin/quote/run/quotes/type/list/' data-pheight="574" class='tpopup'>Manage quotes</a>"
+items[] = "<a href='javascript:;' data-url='{url}plugin/quote/run/settings/' class='tpopup' data-pwidth="634">Quote configuration</a>"
