- updates for the Quote plugin

--- a/config/config.ini
+++ b/config/config.ini
@@ -5,4 +5,4 @@ title = "QUOTE"
 
 [superadmin : cpanel]
 items[] = "<a href='javascript:;' data-url='{url}plugin/quote/run/quotes/type/list/' data-pheight="574" class='tpopup'>Manage quotes</a>"
-items[] = "<a href='javascript:;' data-url='{url}plugin/quote/run/settings/' class='tpopup' data-pwidth="634">Quote configuration</a>"
+items[] = "<a href='javascript:;' data-url='{url}plugin/quote/run/settings/' class='tpopup' data-pwidth="480" data-pheight="364">Quote configuration</a>"
