- config.ini changed to the latest requirements

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,7 +1,11 @@
 include_path = system/app
 
 [cpanel]
-title = "QUOTE"
+title = "STORE"
 
 [superadmin : cpanel]
+
 items[] = "<a href='javascript:;' data-url='{url}plugin/quote/run/settings/' class='tpopup' data-pwidth="480" data-pheight="364">Quote configuration</a>"
+items[] = "pfftss"
+
+
