- config ini fixed

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,11 +1,10 @@
 include_path = system/app
 
 [cpanel]
-title = "STORE"
+title = "Store"
 
 [superadmin : cpanel]
-
 items[] = "<a href='javascript:;' data-url='{url}plugin/quote/run/settings/' class='tpopup' data-pwidth="480" data-pheight="364">Quote configuration</a>"
-items[] = "pfftss"
+
 
 
