Quote system updates

--- a/config/config.ini
+++ b/config/config.ini
@@ -2,8 +2,8 @@ include_path = system/app
 
 
 [actiontriggers]
-quoting.trigger.newquote.title   = "new quote created"
-quoting.trigger.newquote.sendto  = "customer"
-quoting.trigger.newquote.message = "Hi there {customer:name}! We just generated a new quote ({quote:id}) for you. Go ahead and <a href='{$website:url}{quote:id}'> check out your quote</a>"
-quoting.trigger.newquote.from    = "eugene@seotoaster.com"
-quoting.trigger.newquote.subject = "New quote subject"
+quoting.trigger.quote_newquote.title   = "new quote created"
+quoting.trigger.quote_newquote.sendto  = "customer"
+quoting.trigger.quote_newquote.message = "Hi there {customer:name}! We just generated a new quote ({quote:id}) for you. Go ahead and <a href='{$website:url}{quote:id}'> check out your quote</a>"
+quoting.trigger.quote_newquote.from    = "eugene@seotoaster.com"
+quoting.trigger.quote_newquote.subject = "New quote subject"
