--- a/config/config.ini
+++ b/config/config.ini
@@ -2,8 +2,9 @@ include_path = system/app
 
 
 [actiontriggers]
-quoting.trigger.quote_newquote.title   = "new quote created"
-quoting.trigger.quote_newquote.sendto  = "customer"
-quoting.trigger.quote_newquote.message = "Hi there! We just generated a new quote ({quote:id}) for you. Go ahead and <a href='{$website:url}{quote:id}'> check out your quote</a>"
-quoting.trigger.quote_newquote.from    = "eugene@seotoaster.com"
-quoting.trigger.quote_newquote.subject = "New quote subject"
+sales-area.section.title = 'Sales area'
+sales-area.trigger.quote_newquote.title   = "new quote created"
+sales-area.trigger.quote_newquote.sendto  = "customer"
+sales-area.trigger.quote_newquote.message = "Hi there! We just generated a new quote ({quote:id}) for you. Go ahead and <a href='{$website:url}{quote:id}'> check out your quote</a>"
+sales-area.trigger.quote_newquote.from    = "eugene@seotoaster.com"
+sales-area.trigger.quote_newquote.subject = "New quote subject"
