Major quote system update

--- a/config/config.ini
+++ b/config/config.ini
@@ -8,3 +8,9 @@ sales-area.trigger.quote_newquote.sendto  = "customer"
 sales-area.trigger.quote_newquote.message = "Hi there! We just generated a new quote ({quote:id}) for you. Go ahead and <a href='{$website:url}{quote:id}'> check out your quote</a>"
 sales-area.trigger.quote_newquote.from    = "admin@example.com"
 sales-area.trigger.quote_newquote.subject = "New quote subject"
+sales-area.section.title = 'Sales area'
+sales-area.trigger.quote_updated.title   = "quote updated"
+sales-area.trigger.quote_updated.sendto  = "customer"
+sales-area.trigger.quote_updated.message = "Hi there! Your quote[{quote:id}] has been updated. Go ahead and <a href='{$website:url}{quote:id}'> check out your quote</a>"
+sales-area.trigger.quote_updated.from    = "admin@example.com"
+sales-area.trigger.quote_updated.subject = "Your quote has been updated"
