Quote mailing improved and updated

--- a/config/config.ini
+++ b/config/config.ini
@@ -3,11 +3,11 @@ include_path = system/app
 
 [actiontriggers]
 sales-area.section.title = 'Sales area'
-sales-area.trigger.quote_newquote.title   = "new quote created"
-sales-area.trigger.quote_newquote.sendto  = "customer"
-sales-area.trigger.quote_newquote.message = "Hi there! We just generated a new quote ({quote:id}) for you. Go ahead and <a href='{$website:url}{quote:id}'> check out your quote</a>"
-sales-area.trigger.quote_newquote.from    = "admin@example.com"
-sales-area.trigger.quote_newquote.subject = "New quote subject"
+sales-area.trigger.quote_created.title   = "new quote created"
+sales-area.trigger.quote_created.sendto  = "customer"
+sales-area.trigger.quote_created.message = "Hi there! We just generated a new quote ({quote:id}) for you. Go ahead and <a href='{$website:url}{quote:id}'> check out your quote</a>"
+sales-area.trigger.quote_created.from    = "admin@example.com"
+sales-area.trigger.quote_created.subject = "New quote subject"
 sales-area.section.title = 'Sales area'
 sales-area.trigger.quote_updated.title   = "quote updated"
 sales-area.trigger.quote_updated.sendto  = "customer"
