--- a/config/config.ini
+++ b/config/config.ini
@@ -2,13 +2,13 @@ include_path = system/app
 
 
 [actiontriggers]
-sales-area.section.title = 'Sales area'
+sales-area.section.title = 'Quotes'
 sales-area.trigger.quote_created.title   = "new quote created"
 sales-area.trigger.quote_created.sendto  = "customer"
 sales-area.trigger.quote_created.message = "Hi there! We just generated a new quote ({quote:id}) for you. Go ahead and <a href='{$website:url}{quote:id}.html'> check out your quote</a>"
 sales-area.trigger.quote_created.from    = "admin@example.com"
 sales-area.trigger.quote_created.subject = "New quote subject"
-sales-area.section.title = 'Sales area'
+sales-area.section.title = 'Quotes'
 sales-area.trigger.quote_updated.title   = "quote updated"
 sales-area.trigger.quote_updated.sendto  = "customer"
 sales-area.trigger.quote_updated.message = "Hi there! Your quote[{quote:id}] has been updated. Go ahead and <a href='{$website:url}{quote:id}.html'> check out your quote</a>"
