--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
         "php": ">=5.3.7"
     },
     "require-dev": {
-        "sebastian/phpcpd": "dev-master",
-        "squizlabs/php_codesniffer": "1.*",
-        "phpmd/phpmd": "dev-master"
+        "phpmd/phpmd": "2.0.0.*@dev",
+        "squizlabs/php_codesniffer": "2.0.*@dev",
+        "phpmd/phpmd": "2.0.0.*@dev"
     },
     "authors": [
         {
