--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "squizlabs/php_codesniffer": "2.0.*@dev",
         "phpmd/phpmd": "2.0.0.*@dev"
     },
+    "minimum-stability": "dev",
     "authors": [
         {
             "name": "Eugene Nezhuta",
