Add quote signed notification. Add quote signed pdf attachment

--- a/config/config.ini
+++ b/config/config.ini
@@ -14,3 +14,9 @@ quotes.trigger.quote_updated.sendto  = "customer"
 quotes.trigger.quote_updated.message = "Hi there! Your quote[{quote:id}] has been updated. Go ahead and <a href='{$website:url}{quote:id}.html'> check out your quote</a>"
 quotes.trigger.quote_updated.from    = "admin@example.com"
 quotes.trigger.quote_updated.subject = "Your quote has been updated"
+quotes.section.title = 'Quotes'
+quotes.trigger.quote_signed.title   = "quote signed"
+quotes.trigger.quote_signed.sendto  = "customer"
+quotes.trigger.quote_signed.message = "Hi there! Your quote[{quote:id}] has been signed. Go ahead and <a href='{$website:url}{quote:id}.html'> check out your quote</a>"
+quotes.trigger.quote_signed.from    = "admin@example.com"
+quotes.trigger.quote_signed.subject = "Your quote has been signed"
