update default trigger actions

--- a/config/config.ini
+++ b/config/config.ini
@@ -5,12 +5,18 @@ include_path = system/app
 quotes.section.title = 'Quotes'
 quotes.trigger.quote_created.title   = "new quote created"
 quotes.trigger.quote_created.sendto  = "customer"
-quotes.trigger.quote_created.message = "Hi there! We just generated a new quote ({quote:id}) for you. Go ahead and <a href='{$website:url}{quote:id}.html'> check out your quote</a>"
+quotes.trigger.quote_created.message = "Hi there! We just generated a new quote ({quote:id}) for you. Go ahead and <a href=\"{$website:url}{quote:id}.html\"> check out your quote</a>"
 quotes.trigger.quote_created.from    = "admin@example.com"
-quotes.trigger.quote_created.subject = "New quote subject"
+quotes.trigger.quote_created.subject = "New Quote Created"
 quotes.section.title = 'Quotes'
 quotes.trigger.quote_updated.title   = "quote updated"
 quotes.trigger.quote_updated.sendto  = "customer"
-quotes.trigger.quote_updated.message = "Hi there! Your quote[{quote:id}] has been updated. Go ahead and <a href='{$website:url}{quote:id}.html'> check out your quote</a>"
+quotes.trigger.quote_updated.message = "Hi {customer:billing_firstname}!<br/><br/>Thanks for your interest in our services.<br/><br/>Your quote - {quote:title} - for your project is awaiting you <a href=\"{$website:url}{quote:id}.html\"> here</a>.<br/>Please note, the prices included in your quote are valid through  {quote:expiresat}. After that, please request another quote through the system, if needed.<br/> Please <a href=\"{$website:url}{quote:id}.html\">click here</a> to view your online quote. To complete your purchase, click the PayPal \“Pay Now\” button and the bottom of your quote to safely and securely render payment for the requested services. <br/>If you have any questions, would like to discuss this further, or would like to find out about our financing options, please contact your sales consultant,  {quote:editedby} <br/>Once again, thanks for your interest in {organization:organizationName}.  We look forward to helping you! <br/>"
 quotes.trigger.quote_updated.from    = "admin@example.com"
-quotes.trigger.quote_updated.subject = "Your quote has been updated"
+quotes.trigger.quote_updated.subject = "Your Quote is Ready"
+quotes.section.title = 'Quotes'
+quotes.trigger.quote_signed.title   = "quote signed"
+quotes.trigger.quote_signed.sendto  = "customer"
+quotes.trigger.quote_signed.message = "Hi there! Your quote[{quote:id}] has been signed. Go ahead and <a href=\"{$website:url}{quote:id}.html\"> check out your quote</a>"
+quotes.trigger.quote_signed.from    = "admin@example.com"
+quotes.trigger.quote_signed.subject = "Your Quote Has Been Signed"
