Add quote custom fields

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,5 +1,16 @@
 include_path = system/app
 
+[cpanel]
+title = 'STORE'
+section = "STORE"
+
+[customfieldslink : cpanel]
+items[] = "<a href='javascript:;' data-url='{url}plugin/quote/run/quoteCustomFieldsConfig/' data-pwidth="1000" data-pheight="600" class='tpopup'>{value}</a>"
+values[] = "Quote custom fields";
+
+[admin : customfieldslink]
+[superadmin : customfieldslink]
+
 
 [actiontriggers]
 quotes.section.title = 'Quotes'
