Add notify expiry quote

--- a/config/config.ini
+++ b/config/config.ini
@@ -31,3 +31,10 @@ quotes.trigger.quote_signed.sendto  = "customer"
 quotes.trigger.quote_signed.message = "Hi there! Your quote[{quote:id}] has been signed. Go ahead and <a href=\"{$website:url}{quote:id}.html\"> check out your quote</a>"
 quotes.trigger.quote_signed.from    = "no-reply@{$website:domain}"
 quotes.trigger.quote_signed.subject = "Your Quote Has Been Signed"
+
+quotes.trigger.quote_notifyexpiryquote.title   = "Expiry quote notification"
+quotes.trigger.quote_notifyexpiryquote.sendto  = "admin"
+quotes.trigger.quote_notifyexpiryquote.message = ""
+quotes.trigger.quote_notifyexpiryquote.from    = "no-reply@{$website:domain}"
+quotes.trigger.quote_notifyexpiryquote.subject = "Expiry Quote Reminder"
+quotes.trigger.quote_notifyexpiryquote.withsms = ""
